--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 __pycache__/main.cpython-37.pyc
 __pycache__/output.cpython-37.pyc
 __pycache__/simulation.cpython-37.pyc
+__pycache__/output.cpython-37.pyc
