--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ __pycache__/main.cpython-37.pyc
 __pycache__/output.cpython-37.pyc
 __pycache__/simulation.cpython-37.pyc
 __pycache__/output.cpython-37.pyc
+__pycache__/main.cpython-38.pyc
+__pycache__/output.cpython-38.pyc
+__pycache__/simulation.cpython-38.pyc
+__pycache__/output.cpython-38.pyc
+
